Fix aligning of indicator icon; Update logic for dynamically change of thumb indicators via font-size

--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -63,7 +63,7 @@
   top: 50%;
   left: 50%;
   position: absolute;
-  @include transform(translate(-50%, -50%))
+  @include transform(translate(-50%, -50%));
 }
 
 /**
