--- a/css/_videolayout_default.scss
+++ b/css/_videolayout_default.scss
@@ -68,33 +68,24 @@
             }
 
             .indicatoricon {
-                position: absolute;
-                top: 50%;
-                left: 0;
-                @include transform(translateY(-50%));
-                width: 100%;
+                @include absoluteAligning();
             }
 
             .connection {
                 position: relative;
+                display: inline-block;
                 margin: 0 auto;
-                width: 12px;
-                height: 8px;
+                left: 0;
+                @include transform(translate(0, -50%));
 
                 &_empty
                 {
-                    @include topLeft();
-                    max-width: 12px;
-                    width: 12px;
                     color: #8B8B8B;/*#FFFFFF*/
                     overflow: hidden;
                 }
 
                 &_lost
                 {
-                    @include topLeft();
-                    max-width: 12px;
-                    width: 12px;
                     color: #8B8B8B;
                     overflow: visible;
                 }
@@ -102,8 +93,6 @@
                 &_full
                 {
                     @include topLeft();
-                    max-width: 12px;
-                    width: 12px;
                     color: #FFFFFF;/*#15A1ED*/
                     overflow: hidden;
                 }
@@ -112,26 +101,6 @@
             .icon-connection,
             .icon-connection-lost {
                 font-size: 1em;
-            }
-        }
-    }
-
-    &_small {
-        span.indicator {
-            font-size: 5px;
-
-            .connection {
-                height: 5px;
-            }
-        }
-    }
-
-    &_medium {
-        span.indicator {
-            font-size: 6px;
-
-            .connection {
-                height: 6px;
             }
         }
     }
